# github-scraper-chatbot

./: .gitignore  .~lock.test.xlsx#  README.md  app.py  chatbot.py  config.py  main.py  pyproject.toml  q1.md  scraper.py  test.xlsx  theme.json  utils.py
app/: app.py  theme.json
services/: __init__.py  chatbot.py  scraper.py
utils/: export.py  text.py
