[project]
name = "github-scraper-chatbot"
version = "0.1.0"
description = "Creates GUI application that allows a user to enter a GitHub username and an output file path. Program scrapes user's (public) GitHub repos into an Excel file. Also includes embedded chatbot using Google Gemini Flash API to answer questions about the repo names." 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "customtkinter>=5.2.2",
    "google-genai>=2.8.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
